--- a/Paper.Rmd
+++ b/Paper.Rmd
@@ -7,12 +7,12 @@ author:
   - Beverly E. Law, Forest Ecosystems & Society, Oregon State University, Corvallis, OR
 date: '`r Sys.Date()`'
 output:
-  pdf_document: 
+  bookdown::pdf_document2: 
     fig_caption: yes
     number_sections: yes
     toc: yes
     keep_tex: true
-  html_document: 
+  bookdown::html_document2: 
     fig_caption: yes
     number_sections: yes
     toc: yes
@@ -34,9 +34,9 @@ With simulated disturbance we demonstrate the ability to not only detect discret
 
 Researchers have devoted considerable time and resources to developing "bottom-up" terrestrial carbon (C) cycle data products at landscape- to global-scales (**CITE**, e.g. SOCCR2). Such efforts have drawn upon various combinations of remote sensing, inventory data, field-based sensors (e.g., eddy covariance), and process-based models with the aims of improving our understanding of C cycle processes, improving predictions of future changes in the C cycle, and improving monitoring, reporting, and verification (MRV) or C stocks and fluxes (**CITE**). MRV in particular is driven by a combination of local, national, and international reporting requirements (e.g. UN Framework Convention on Climate Change) and increasingly by the demand for natural climate solutions and carbon market certification (**CITE**).
 
-A particularly critical part of carbon MRV is the impact of land use, land use change, forestry (LULUCF) and natural disturbance (e.g. wildfire, pests, wind), which can have major impacts on the carbon cycle, quickly turning C sinks into large sources, and are responsible for a large fraction of interannual C cycle variability (CITE). They are also places where management and policy can have the greatest impact on carbon pools and fluxes, in terms of avoiding transitions, increasing resilience, and managing restoration and recovery after transitions occur. Looking to the future, many types of disturbance are predicted to become more frequent and/or more intense, and there is mounting evidence that C stocks are likely to be more sensitive to climate effects on disturbance regimes than they are to the direct ecophysiological effects of climate and elevated $CO_2$ [@McDowell, @Andrews2018]. While there are a variety of approaches employed to monitor and understand the C cycle processes for intact ecosystems, when it comes to disturbance the status quo is based on detecting disturbances (e.g., via remote sensing) and then using a simple look up table to quantify C cycle impacts (CITE). While the closely related fields of disturbance detection and land use, land-use change, and forestry (LULUCF) monitoring have made considerable advances in recent years (CITE), the reliance on simple static look-up tables to quantify emissions is clearly missing considerable variability across space, time, and disturbance intensity.
+A particularly critical part of carbon MRV is the impact of land use, land use change, forestry (LULUCF) and natural disturbance (e.g. wildfire, pests, wind), which can have major impacts on the carbon cycle, quickly turning C sinks into large sources, and are responsible for a large fraction of interannual C cycle variability (CITE). They are also places where management and policy can have the greatest impact on carbon pools and fluxes, in terms of avoiding transitions, increasing resilience, and managing restoration and recovery after transitions occur. Looking to the future, many types of disturbance are predicted to become more frequent and/or more intense, and there is mounting evidence that C stocks are likely to be more sensitive to climate effects on disturbance regimes than they are to the direct ecophysiological effects of climate and elevated $CO_2$ [@McDowell2020, @Andrews2018]. While there are a variety of approaches employed to monitor and understand the C cycle processes for intact ecosystems, when it comes to disturbance the status quo is based on detecting disturbances (e.g., via remote sensing) and then using a simple look up table to quantify C cycle impacts (CITE). While the closely related fields of disturbance detection and land use, land-use change, and forestry (LULUCF) monitoring have made considerable advances in recent years (CITE), the reliance on simple static look-up tables to quantify emissions is clearly missing considerable variability across space, time, and disturbance intensity.
 
-The alternative to look-up tables is to rely on process-based models to capture the spatiotemporal in the C cycle. However, by themselves process-based models are going to misrepresent many disturbances, either under- or over-predicting individual events, both because there is an inherently stochastic component to disturbances (CITE) and because the representation of disturbance is highly simplified in most models (CITE), with major classes of disturbance being absent from most models (e.g., forest pests, [@Hicke2022, @DietzeMatthes2014]). Ultimately, MRV needs to be done with the disturbances that actually happened, not those that were predicted. On the other hand, prescribing disturbance in models ignores the uncertainty in disturbance detection and brings us back to using look-up tables to prescribe how the disturbance is represented in the model.
+The alternative to look-up tables is to rely on process-based models to capture the spatiotemporal in the C cycle. However, by themselves process-based models are going to misrepresent many disturbances, either under- or over-predicting individual events, both because there is an inherently stochastic component to disturbances (CITE) and because the representation of disturbance is highly simplified in most models (CITE), with major classes of disturbance being absent from most models (e.g., forest pests, [@Hicke2012, @DietzeMatthes2014]). Ultimately, MRV needs to be done with the disturbances that actually happened, not those that were predicted. On the other hand, prescribing disturbance in models ignores the uncertainty in disturbance detection and brings us back to using look-up tables to prescribe how the disturbance is represented in the model.
 
 State data assimilation offers a promising path forward for addressing these challenges and is already being to see increasing applications in other aspects of carbon MRV [@Baatz2021]. The basic idea is that a process model is run numerous times to make a probabilistic prediction of the full carbon cycle (pools and fluxes) from one point in time to the next, sampling over the uncertainties about the current state of the system and possibly also parameter, driver, and process (residual) uncertainties. This multivariate prediction represents our (Bayesian) _prior_ understanding of the carbon cycle that is then updated, using Bayes' Theorem, based on observations of one or more these pools or fluxes [@Dietze2017a,@Wikle2007]. In essence, data assimilation "nudges" the model back towards the data, with the size of the nudge proportional to the relative uncertainties in the model (prior) and the data (Likelihood). The resulting posterior estimate is able to fuse numerous data constraints on the different pools and fluxes, is robust to large amounts of missing observations in space, time, and pool/flux, and provides a rich uncertainty estimate. Finally, unlike monitoring-only systems, data assimilation systems can seamlessly transition from reconstructing the past (a.k.a. reanalysis), to real-time monitoring (a.k.a. nowcast), to predictive forecasts [@Dietze2017a]. A handful of different terrestrial carbon data assimilation systems are now in opperations (e.g., CLM-DART, CCDAS, PEcAn), with applications at site [@Raiho2020], regional [@Raczka2021], continental [@Dokoohaki2022], and global [@Fox2022, @Rayner2005] scales.
 
