--- a/discussion.Rmd
+++ b/discussion.Rmd
@@ -9,7 +9,7 @@
     * related: with multi-PFT need to check for, and protect against, long term PFT leakage
   * Computational demand it high for problems with many grid cells
     * Efficient (semi-)analytic approximations or LUT
-    * work at larger spatial scales and account for subgrid disturbance heterogeneity implicitly [@McCabe]
+    * work at larger spatial scales and account for subgrid disturbance heterogeneity implicitly [@McCabe2019]
   * Multisite needs a way of estimating $\rho$ by site with cross site correlations, rather than unique $\rho$ for all permutations
     * for $\rho$ handle the covariances of nearby sites -- disturbance in one usually increases the probability of disturbance in others
     * similarly, need to be able to compose Multisite $\mu_f$ and $P_f$, from individual site values with reasonable approximations of cross-[site x pool] correlations
