--- a/methods.Rmd
+++ b/methods.Rmd
@@ -190,7 +190,7 @@ Having tested the Multinomial assimilation against simulated data we next applie
 
 ### Study region and data sources
 
-Our study region was a Landsat tile over central Oregon, USA located between 120 47'W and 123 7'W longitude and 43 45'N and 45 '4'N latitude. For this tile we extracted data from three derived Landtrendr datasets (http://emapr.ceoas.oregonstate.edu/pages/data/viz/index.html, tile h03v04):  biomass, cover, and disturbance. All three products were 30m resolution and annual timestep;biomass and cover extended from 1990-2017, while disturbance extended from 1984-2011 and a nearest neighbor algorithm was used to regrid the disturbance data to be the same as biomass and cover. The biomass product calibrated Landtrendr-processed Landsat data against field plot data using the gradient nearest neighbor (GNN) methodology to produce an annual biomass estimates [@Kennedy2018]. The cover product trained a spatiotemporal exploratory model (STEM), which uses an ensemble of regression trees defined within spatially overlapping support sets, against the 2001 U.S. National Land Cover Database (NLCD) to produce annual land-cover maps for Washington, Oregon, and California [@HOOPER2018]. To similify the analysis we focused on a single vegetation type, evergreen forest, which is the dominant vegetation cover in the region and consists primarily of Ponderosa pine (_Pinus ponderosa_). The disturbance product **need text and citation from Robert** [CITE]. To simplify analyses we aggregated the disturbance product into five classes: undisturbed, cut, fire, pest, and other.
+Our study region was a Landsat tile over central Oregon, USA located between 120 47'W and 123 7'W longitude and 43 45'N and 45 '4'N latitude. For this tile we extracted data from three derived Landtrendr datasets (http://emapr.ceoas.oregonstate.edu/pages/data/viz/index.html, tile h03v04):  biomass, cover, and disturbance. All three products were 30m resolution and annual timestep;biomass and cover extended from 1990-2017, while disturbance extended from 1984-2011 and a nearest neighbor algorithm was used to regrid the disturbance data to be the same as biomass and cover. The biomass product calibrated Landtrendr-processed Landsat data against field plot data using the gradient nearest neighbor (GNN) methodology to produce an annual biomass estimates [@Kennedy2018]. The cover product trained a spatiotemporal exploratory model (STEM), which uses an ensemble of regression trees defined within spatially overlapping support sets, against the 2001 U.S. National Land Cover Database (NLCD) to produce annual land-cover maps for Washington, Oregon, and California [@HOOPER2018]. To similify the analysis we focused on a single vegetation type, evergreen forest, which is the dominant vegetation cover in the region and consists primarily of Ponderosa pine (_Pinus ponderosa_). The disturbance product **need textfrom Robert** [@KENNEDY2010]. To simplify analyses we aggregated the disturbance product into five classes: undisturbed, cut, fire, pest, and other.
 
 ```{r map, echo=FALSE, fig.cap="Remotely sensed observations from central Oregon for 2004 used as inputs to test the multinomial filter against real-world disturbances"}
 ## maps of pre-disturbance biomass, cover, and 2004 disturbance
